Performance improvements (also seems to have resolved an application that ran forever on Rechenknecht)